feat: pre/post-condition wiring on transitions
TransitionDef now exposes pre/post-condition overloads that mirror exactly
across the two sides:

  preCondition(String registeredConditionId)            // reference
  preConditionExpression(String expression)             // auto-id SpEL
  preCondition(String id, Condition<T, C>)              // instance
  preCondition(String id, Class<? extends Condition>)   // class
  preCondition(String id, Predicate<T>)                 // predicate
  preCondition(String id, String expression)            // explicit-id SpEL

Each non-reference overload builds the matching ConditionDescriptor
internally and appends to a single ordered descriptor list, preserving
call order across multiple registrations. ConditionDescriptor stays
framework-internal — it no longer appears on the public TransitionDef
surface.

OperationlessTransitionDef is merged into TransitionDef. The narrowing
window was zero — nothing in the chain ever returned the narrower type,
and its methods returned the wider TransitionDef anyway — so the split
was pure scaffolding. Trigger stubs and withName / withDescription move
directly onto TransitionDef, the latter now backed by real storage and
the same overwrite-warn pattern other defs use.

StateMachineDefImpl resolves the SM-level condition registry once at
build time; each TransitionDefImpl resolves its own pre/post descriptor
lists against that registry through ConditionResolver (now public with
the framework-internal note), producing the bound condition lists that
TransitionImpl carries.

StateMachineImpl evaluates pre-conditions before the operation and
post-conditions after; first failure in either list short-circuits, the
state applier is skipped, and the failing condition's id surfaces in
TransitionResult.error. Transitions with no operation continue to work
unchanged — the runtime already tolerated a null bound operation; no
NoOpOperation marker introduced.

ConditionDescriptor gains a fifth permitted record, 